# opengem

./: .gitignore  EPISTEMIC.md  MORNING-BRIEFING.md  README.md  SIGNOFF.md  SIGNOFF.md.template  STATE-OF-REALITY.md  pyproject.toml
.claude/: .gitignore
.github/workflows/: ci.yml
docs/: example-digest.md  first-us-forecast.json
docs/design/: 00-master-design-document.md  LOOP_PLAN-v2.md  LOOP_PLAN.md
docs/design/00-program/: 00-master-design-document-v1.0.md  OG1-CONOPS-001.md
docs/research/: R00-charter.md  R01-accuracy-ceiling.md  R02-vintage-coverage.md  R03-hybrid-evidence.md  R04-bgvar-compute.md  R05-source-access.md  R06-wider-information-surface.md  R07-tier-v-roster.md  R08-vv-matrix-detail.md  R09-fred-substitution.md  R10-ssdd-008-situation.md  R100-vision.md  R11-scenario-invocation.md  R12-reference-systems.md  R13-anvil-stress-test.md  R14-l3-architecture.md  R15-personal-use-cases.md  R16-reproducibility.md  R17-bus-factor.md  R18-first-90-days.md  R19-adapter-skeletons.md  R20-contingency-trees.md  R21-block-2-3-scope.md  R22-cost-projection.md  R23-oblique-lawyer-parallels.md  R24-backtest-engine.md  R25-leaderboard-algorithm.md  R26-security-privacy.md  R27-open-issues.md  R28-glossary.md  R29-decision-framework.md  R99-synthesis.md  README.md
forecasts/: README.md
research-300/: INDEX.md  QUEUE.md  QUEUE.md.bak  QUEUE.md.bak2  STATUS.md
research-300/loops/: L001-vision-statement.md  L002-competitive-landscape.md  L003-personas.md  L004-jtbd-map.md  L005-north-star-metric.md  L006-pricing-thesis.md  L007-distribution-thesis.md  L008-differentiation.md  L009-anti-personas.md  L010-five-year-arc.md  L011-openbb-terminal.md  L012-qlib.md  L013-backtrader-vectorbt-zipline.md  L014-finos-perspective.md  L015-lightweight-charts.md  L016-data-publishing-platforms.md  L017-awesome-quant-roundup.md  L018-pdf-table-tools.md  L019-order-book-viewers-oom.md  L020-fingpt-finnlp-finrl.md  L021-gdelt-gkg.md  L022-acled.md  L023-icews-phoenix-terrier.md  L024-gpr.md  L025-cline-center.md  L026-ucdp.md  L027-vdem.md  L028-opensanctions.md  L029-stratfor-osint-mirrors.md  L030-geopolitical-risk-indices-comparison.md  L031-gdpnow-atlanta-fed.md  L032-ny-fed-nowcasting.md  L033-cleveland-fed-inflation-nowcast.md  L034-dynare-iris-dsge-landscape.md  L035-statsmodels-bvar-ecosystem.md  L036-bayesian-stack-pymc-stan-numpyro.md  L037-kalman-state-space-libraries.md  L038-bgvar-r-package.md  L039-federal-reserve-open-code.md  L040-imf-gas-public-data.md  (+232 more)
research-300/prototypes/api-stub/: openapi-sample.yaml
research-300/prototypes/dashboard-next/: README.md  next.config.mjs
research-300/prototypes/dashboard-next/app/accountability/: page.tsx
research-300/prototypes/dashboard-next/app/countries/[iso3]/: page.tsx
research-300/prototypes/dashboard-next/app/embed/: page.tsx
research-300/prototypes/dashboard-next/app/events/: page.tsx
research-300/prototypes/dashboard-next/app/forecasts/: page.tsx
research-300/prototypes/dashboard-next/app/indicators/[id]/: page.tsx
research-300/prototypes/dashboard-next/app/mcp/: page.tsx
research-300/prototypes/dashboard-next/app/pricing/: page.tsx
research-300/prototypes/dashboard-next/app/scenarios/[slug]/: page.tsx
research-300/prototypes/dashboard-next/app/track-record/[indicator]/: page.tsx
research-300/prototypes/dashboard-next/app/vintage/: page.tsx
research-300/prototypes/dashboard-next/components/: CommandPalette.tsx
research-300/prototypes/dashboard-next/components/layout/: Footer.tsx
research-300/prototypes/dashboard-next/components/tiles/: IndicatorTile.tsx
research-300/prototypes/dashboard-next/lib/: api.ts  utils.ts
research-300/synthesis/: AGENT-WORK-LOG.md  MIDPOINT-FINDINGS.md  NEXT-30-DAYS.md  RUNBOOK-V0.md
scripts/: first_us_forecast.py
tests/integration/: test_stratfor_grade_demo.py  test_vertical_slice.py
